--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Biscuit02 HR - Employee Dashboard</title>
-  <link rel="stylesheet" href="styles/styles.css" />
-</head>
-<body>
-  <header><h1>কর্মচারী ড্যাশবোর্ড</h1></header>
-  <main class="container">
-    <section class="card">
-      <h2>মেসেজ পাঠান (HR)</h2>
-      <label>Employee ID</label>
-      <input id="employee-id" placeholder="EMP001" />
-      <label>Phone (+880...)</label>
-      <input id="employee-phone" placeholder="+8801XXXXXXXXX" />
-      <label>Message</label>
-      <textarea id="message-box" placeholder="আপনার বার্তা লিখুন..."></textarea>
-      <button id="send-message">পাঠান</button>
-      <p id="status" class="muted"></p>
-    </section>
-
-    <section class="card">
-      <h2>আমার ফাইলসমূহ (Attendance Files)</h2>
-      <label>Employee ID</label>
-      <input id="emp-id-files" placeholder="EMP001" />
-      <button id="load-files">Load Files</button>
-      <ul id="file-list"></ul>
-    </section>
-
-  </main>
-
-  <script type="module" src="scripts/firebase-init.js"></script>
-  <script type="module" src="scripts/chat.js"></script>
-  <script type="module" src="scripts/files-viewer.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Employee Dashboard</title></head><body>Employee Dashboard</body></html>
