--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Admin Panel</title></head><body>Admin Panel</body></html>
+<!DOCTYPE html><html lang="bn"><head><meta charset="utf-8"/><title>Admin Panel</title></head><body>Admin Panel</body></html>
