--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Employee Dashboard</title></head><body>Employee Dashboard</body></html>
+<!DOCTYPE html><html lang="bn"><head><meta charset="utf-8"/><title>Biscuit02 HR - Dashboard</title></head><body>Employee Dashboard</body></html>
